--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Realistic Bulb and Switch</title>
+    <title>Realistic Bulb</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,6 +16,9 @@
             <div class="switch__button"></div>
         </div>
     </div>
+    <footer>
+        <p>All rights reserved 2025 @Talha Tarique</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
